--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Passport-exercise",
+  "name": "AlloyMeApp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "periodic-table": "0.0.8",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
